add text defaults

--- a/index.html
+++ b/index.html
@@ -20,10 +20,40 @@
 
         <div id="codeCard" class="position">
             <p ng-bind="codeCard"></p>
+            <div id="defaultCodeCard">
+                <ul>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                </ul>
+
+                <ul>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                </ul>
+
+                <ul>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                </ul>
+
+                <ul>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                    <li>&#9899;</li>
+                </ul>
+            </div>
         </div>
 
         <div id="namePerson" class="position">
             <p ng-bind="name"></p>
+            <p id="defaultNamePerson">FULL NAME</p>
         </div>
 
         <div id="expiryDate" class="position">
@@ -39,6 +69,16 @@
 
                 <div id="textAngular">
                     <p ng-bind="expiry"></p>
+                    <div id="defaultTextAngular">
+                        <ul>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                            <li>&#47;</li>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                        </ul>
+
+                    </div>
                 </div>
             </div>
             <div class="clear"></div>
@@ -57,6 +97,13 @@
             <div id="whiteLine"></div>
             <div id="cvcCode" class="position">
                 <p ng-bind="cvc"></p>
+                <div id="defaultCvcCode">
+                    <ul>
+                        <li>&#9899;</li>
+                        <li>&#9899;</li>
+                        <li>&#9899;</li>
+                    </ul>
+                </div>
             </div>
             <div id="blockInfo" class="position">
                 <div id="infoImg">
