--- a/index.html
+++ b/index.html
@@ -9,119 +9,114 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
 <body>
-    <div id="card1">
-        <div id="imgVisa" class="position">
-            <img src="images/visaF.jpg">
-        </div>
-
-        <div id="imgCode" class="position">
-            <img src="images/code.png">
-        </div>
-
-        <div id="codeCard" class="position">
-            <p ng-bind="codeCard"></p>
-            <div id="defaultCodeCard">
-                <ul>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                </ul>
-
-                <ul>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                </ul>
-
-                <ul>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                </ul>
-
-                <ul>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                    <li>&#9899;</li>
-                </ul>
-            </div>
-        </div>
-
-        <div id="namePerson" class="position">
-            <p ng-bind="name"></p>
-            <p id="defaultNamePerson">FULL NAME</p>
-        </div>
-
-        <div id="expiryDate" class="position">
-            <div class="clear"></div>
-            <div id="containerExpiryDate">
-                <div id="validDate">
-                    <p>valid data</p>
+    <div id="monitorSlider">
+        <div id="containerSlider">
+            <div id="card1">
+                <div id="imgVisa" class="position">
+                    <img src="images/visaF.jpg">
                 </div>
 
-                <div id="paragExpiryDate">
-                    <p>MONTH/YEAR</p>
+                <div id="imgCode" class="position">
+                    <img src="images/code.png">
                 </div>
 
-                <div id="textAngular">
-                    <p ng-bind="expiry"></p>
-                    <div id="defaultTextAngular">
+                <div id="codeCard" class="position">
+                    <p ng-bind="codeCard"></p>
+                    <div id="defaultCodeCard">
                         <ul>
                             <li>&#9899;</li>
                             <li>&#9899;</li>
-                            <li>&#47;</li>
                             <li>&#9899;</li>
                             <li>&#9899;</li>
                         </ul>
 
+                        <ul>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                        </ul>
+
+                        <ul>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                        </ul>
+
+                        <ul>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                            <li>&#9899;</li>
+                        </ul>
                     </div>
                 </div>
+
+                <div id="namePerson" class="position">
+                    <p ng-bind="name"></p>
+                    <p id="defaultNamePerson">FULL NAME</p>
+                </div>
+
+                <div id="expiryDate" class="position">
+                    <div class="clear"></div>
+                    <div id="containerExpiryDate">
+                        <div id="validDate">
+                            <p>valid data</p>
+                        </div>
+
+                        <div id="paragExpiryDate">
+                            <p>MONTH/YEAR</p>
+                        </div>
+
+                        <div id="textAngular">
+                            <p ng-bind="expiry"></p>
+                            <div id="defaultTextAngular">
+                                <ul>
+                                    <li>&#9899;</li>
+                                    <li>&#9899;</li>
+                                    <li>&#47;</li>
+                                    <li>&#9899;</li>
+                                    <li>&#9899;</li>
+                                </ul>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
             </div>
-            <div class="clear"></div>
+
+            <div id="card2">
+                <div id="blackLine"></div>
+                <div id="whiteLineAndCodeCvc">
+                    <div class="clear"></div>
+                    <div id="whiteLine"></div>
+                    <div id="cvcCode" class="position">
+                        <p ng-bind="cvc"></p>
+                        <div id="defaultCvcCode">
+                            <ul>
+                                <li>&#9899;</li>
+                                <li>&#9899;</li>
+                                <li>&#9899;</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="blockInfo" class="position">
+                        <div id="infoImg">
+                            <img src="images/code.png">
+                        </div>
+                        <div id="infoText">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Dolore est exercitationem modi natus, obcaecati similique soluta voluptas.
+                                Dolore fugit impedit molestiae quos.</p>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
         </div>
-
-        <!--<div id="cvcCode" class="position">-->
-            <!--<p ng-bind="cvc"></p>-->
-        <!--</div>-->
-
     </div>
-
-    <div id="card2">
-        <div id="blackLine"></div>
-        <div id="whiteLineAndCodeCvc">
-            <div class="clear"></div>
-            <div id="whiteLine"></div>
-            <div id="cvcCode" class="position">
-                <p ng-bind="cvc"></p>
-                <div id="defaultCvcCode">
-                    <ul>
-                        <li>&#9899;</li>
-                        <li>&#9899;</li>
-                        <li>&#9899;</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="blockInfo" class="position">
-                <div id="infoImg">
-                    <img src="images/code.png">
-                </div>
-                <div id="infoText">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Dolore est exercitationem modi natus, obcaecati similique soluta voluptas.
-                        Dolore fugit impedit molestiae quos.</p>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-    </div>
-
-
-
-    <br><br><br>
 
     <form action="" method="">
 
@@ -142,7 +137,6 @@
         <label for="cvc">CVC</label><br>
         <input type="text" ng-model="cvc" id="cvc" placeholder="CVC"
                onkeyup="validInputNumber(this)"><br>
-
 
     </form>
 
